# projeto_Lena

./: README.md  pyproject.toml  requirements.txt
projeto_lena/: main.py  util.py
tests/: testes.py
