[tool.poetry]
name = "projeto-lena"
version = "0.1.0"
description = ""
authors = ["devid <nnick4673@gmail.com>"]
readme = "README.md"
packages = [{include = "projeto_lena"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
