[tool.poetry]
name = "projeto-lena"
version = "0.1.0"
description = ""
authors = ["devid <nnick4673@gmail.com>"]
readme = "README.md"
packages = [{include = "projeto_lena"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
yfinance = "^0.2.12"
typer = {extras = ["all"], version = "^0.7.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
